# opencodex

./: .gitignore  .prettierignore  .prettierrc.js  CLAUDE.md  CONTRIBUTING.md  README.md  README_zh.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: .clippy.toml  .rustfmt.toml  Cargo.toml  README.md  example.txt  tarpaulin.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/agents/: bulk_edit.md  coder.md  execute.md  explore.md  general.md  orchestrate.md  plan.md  research.md
src-tauri/prompts/base/: methodology.md  role.md  rules.md
src-tauri/prompts/commands/: code-review.md  orchestrate-mode.md  plan-mode.md  skill-creator.md  skill-installer.md
src-tauri/prompts/models/: anthropic-claude.md  deepseek.md  generic.md  google-gemini.md  openai-codex.md  openai-gpt.md  openai-o-series.md
src-tauri/prompts/reminders/: coder_with_plan.md  duplicate_tools.md  loop_warning.md  max_steps.md  no_workspace.md  plan_mode.md
src-tauri/prompts/system/: compaction.md  compaction_user.md  conversation_summary.md  env.md  subtask_summary_user.md
src-tauri/sql/: 01_tables.sql  02_indexes.sql  03_triggers.sql  04_seed.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: error.rs  mod.rs
src-tauri/src/agent/agents/: config.rs  frontmatter.rs  loader.rs  mod.rs
src-tauri/src/agent/command_system/: loader.rs  mod.rs  types.rs
src-tauri/src/agent/common/: llm_text.rs  mod.rs  text.rs  truncation.rs
src-tauri/src/agent/compaction/: config.rs  loader.rs  mod.rs  result.rs  service.rs
src-tauri/src/agent/config/: agent.rs  context_builder.rs  mod.rs  pipeline.rs  prompt.rs  runtime.rs  tools.rs
src-tauri/src/agent/context/: builder.rs  file_tracker.rs  mod.rs  project_context.rs
src-tauri/src/agent/core/: commands.rs  mod.rs  utils.rs
src-tauri/src/agent/mcp/: adapter.rs  client.rs  commands.rs  error.rs  mod.rs  registry.rs  types.rs
src-tauri/src/agent/permissions/: checker.rs  mod.rs  pattern.rs  tool_filter.rs  types.rs
src-tauri/src/agent/persistence/: manager.rs  mod.rs  models.rs  repositories.rs  util.rs
src-tauri/src/agent/prompt/: builder.rs  loader.rs  mod.rs  model_harness.rs  orchestrator.rs
src-tauri/src/agent/react/: loop_detector.rs  mod.rs  runtime.rs  types.rs
src-tauri/src/agent/shell/: buffer.rs  config.rs  error.rs  executor.rs  mod.rs  types.rs
src-tauri/src/agent/skill/: loader.rs  manager.rs  mod.rs  registry.rs  test_utils.rs  tool.rs  types.rs  validator.rs
src-tauri/src/agent/state/: iteration.rs  manager.rs  mod.rs  session.rs
src-tauri/src/ai/: error.rs  mod.rs  service.rs  types.rs
src-tauri/src/ai/tool/: mod.rs
src-tauri/src/checkpoint/: blob_store.rs  commands.rs  config.rs  mod.rs  models.rs  service.rs  storage.rs
src-tauri/src/code_intel/: mod.rs  tree_sitter.rs  tree_sitter_diagnostics.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/completion/: command_line.rs  commands.rs  context_analyzer.rs  context_collector.rs  engine.rs  error.rs  mod.rs  output_analyzer.rs  runtime.rs  smart_extractor.rs  smart_provider.rs  types.rs
src-tauri/src/config/: commands.rs  defaults.rs  error.rs  manager.rs  mod.rs  paths.rs  terminal_commands.rs  types.rs
src-tauri/src/events/: context.rs  mod.rs  mux.rs  shell.rs
src-tauri/src/file_watcher/: commands.rs  config.rs  events.rs  mod.rs  watcher.rs
src-tauri/src/filesystem/: commands.rs
src-tauri/src/git/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/llm/: anthropic_types.rs  commands.rs  error.rs  mod.rs  models_dev.rs  preset_models.rs  provider_registry.rs  retry.rs  service.rs  types.rs
src-tauri/src/lsp/: client.rs  commands.rs  language.rs  manager.rs  mod.rs  server.rs  types.rs
src-tauri/src/menu/: handler.rs  mod.rs
src-tauri/src/mux/: config.rs  error.rs  io_handler.rs  mod.rs  pane.rs  performance_monitor.rs  shell_manager.rs  singleton.rs  terminal_mux.rs  types.rs
src-tauri/src/node/: commands.rs  detector.rs  mod.rs  types.rs
src-tauri/src/settings/: commands.rs  error.rs  manager.rs  mod.rs  types.rs
src-tauri/src/setup/: error.rs  mod.rs
src-tauri/src/shell/: commands.rs  error.rs  integration.rs  integration_test.rs  mod.rs  osc_parser.rs
src-tauri/src/storage/: README.md  cache.rs  database.rs  error.rs  mod.rs  paths.rs  sql_scripts.rs  types.rs
src-tauri/src/terminal/: channel_manager.rs  channel_state.rs  context_registry.rs  context_service.rs  error.rs  event_handler.rs  integration_test.rs  mod.rs  scrollback.rs  types.rs
src-tauri/src/utils/: api_response.rs  error_handler.rs  i18n.rs  language.rs  mod.rs
src-tauri/src/vector_db/: mod.rs
src-tauri/src/window/: error.rs  mod.rs
src-tauri/src/workspace/: commands.rs  error.rs  mod.rs  rules.rs  service.rs  types.rs
src-tauri/tests/: terminal_commands_integration.rs  test_web_fetch.rs
src-tauri/tests/common/: mod.rs  test_utils.rs
src-tauri/tests/pty/: pty_test.rs
src-tauri/tests/storage/: mod.rs
src-tauri/tests/test_utils/: assertions.rs  builders.rs  mod.rs
src-tauri/tests/unit/: context_service_test.rs  mux_unit_tests.rs  singleton_tests.rs  theme_tests.rs  window_commands_test.rs
(+410 files in other folders)
