[package]
name = "opencodex"
version = "0.1.0"
description = "OpenCodex - The open source AI coding agent"
authors = ["you"]
edition = "2021"
default-run = "opencodex"
license = "GPL-3.0-or-later"
autobins = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

# 排除工具二进制文件，避免在打包时出现问题
[[bin]]
name = "opencodex"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
parking_lot = "0.12"
tauri = { version = "2.10", features = ["macos-private-api", "devtools"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.6"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-http = "2"
tauri-plugin-process = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "net", "fs", "time", "macros", "process"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = "0.8"
crossbeam-channel = "0.5"
bytes = { version = "1", features = ["serde"] }
dashmap = "6.0"


# 补全功能相关依赖
regex = "1.10"
fuzzy-matcher = "0.3"
dirs = "6.0"
walkdir = "2.4"
lru = "0.12"
async-trait = "0.1"
urlencoding = "2.1"
url = "2.5"
percent-encoding = "2.3"
once_cell = "1.19"
shell-words = "1.1"

# AI集成功能相关依赖
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
async-stream = "0.3"
tiktoken-rs = "0.5"

base64 = "0.22"
bincode = "1.3"
md5 = "0.7"

sha2 = "0.10"
hex = "0.4"

# OAuth 支持
tiny_http = "0.12"
getrandom = "0.2"
serde_urlencoded = "0.7"

# 主机名获取
hostname = "0.4"
# 跨平台机器 UID 获取
machine-uid = "0.5"

# LLM 提供商 SDK
async-openai = "0.29"

# HTML 解析和内容提取
scraper = "0.20"
htmd = "0.3"

xmltree = "0.10"

# SQLite 数据库支持
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json", "migrate"] }

# 加密支持
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"

# 系统信息
os_info = "3.8"

# AST 解析相关依赖 - 使用最佳技术选型
oxc_parser = "0.41"
oxc_ast = "0.41"
oxc_span = "0.41"
oxc_allocator = "0.41"
oxc_syntax = "0.41"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
glob = "0.3"
tauri-plugin-window-state = "2.4.0"
tauri-plugin-autostart = "2.5.0"
eventsource-stream = "0.2.3"
ignore = "0.4"
# ripgrep 核心 crate (内嵌搜索，无需外部 rg 二进制)
grep-searcher = "0.1"
grep-regex = "0.1"
grep-matcher = "0.1"
# 向量数据库相关依赖
blake3 = "1.5"
hnsw_rs = "0.3"
# Tree-sitter 用于语法树解析
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-swift = "0.7"
# Tokenizers 用于精确 token 计数
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
hf-hub = "0.3"

# 文件监控系统依赖
notify = "6.1"
debounce = "0.2"
diffy = "0.3"
open_in_editor = "0.2.1"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["term", "fs"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
window-vibrancy = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_Foundation"] }



# 测试配置
[[test]]
name = "mux_unit_tests"
path = "tests/unit/mux_unit_tests.rs"

[[test]]
name = "pty_test"
path = "tests/pty/pty_test.rs"

[[test]]
name = "singleton_tests"
path = "tests/unit/singleton_tests.rs"

[[test]]
name = "terminal_commands_integration"
path = "tests/terminal_commands_integration.rs"

[[test]]
name = "context_service_test"
path = "tests/unit/context_service_test.rs"

[[test]]
name = "window_commands_test"
path = "tests/unit/window_commands_test.rs"

[[test]]
name = "theme_tests"
path = "tests/unit/theme_tests.rs"


# 桌面平台特定依赖
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

# 编译优化配置
[profile.dev]
# 减少调试信息以节省空间
debug = 1
# 启用增量编译
incremental = true

[profile.release]
# 优化大小
opt-level = "s"
# 减少调试信息
debug = false
# 启用链接时优化
lto = true
# 减少代码大小
codegen-units = 1
# 去除panic信息以减少大小
panic = "abort"
